testsuite/tests/parser/should_fail/Or2.hs
{-# LANGUAGE OrPatterns #-}

module Main where

main = print $ case 3 of
  4 | 5 -> False