testsuite/tests/parser/should_fail/Or2.stderr

Or2.hs:6:7: error: [GHC-39999]
    • No instance for ‘Num Bool’ arising from the literal ‘5’
    • In the expression: 5
      In a stmt of a pattern guard for
                     a case alternative:
        5
      In a case alternative: 4 | 5 -> False
